--- a/Calculator/calculator.css
+++ b/Calculator/calculator.css
@@ -7,7 +7,8 @@ body {
 #heading {
     margin: auto;
     text-align: center;
-    width: 900px;
+    align-items: center;
+    width: 100%;
     height: 175px;
 }
 
@@ -16,6 +17,59 @@ body {
     height: 425px;
     margin: auto;
     background-color: #99FF99;
-    border: 5px solid green;
+    border: 5px solid black;
     border-radius: 15px;
+    padding: 0;
+}
+
+#buttons-container {
+    width: 375px;
+    height: 290px;
+    margin: auto;
+}
+
+.button {
+    background-color: black;
+    width: 90px;
+    height: 50px;
+    margin: auto;
+    border: 3px solid #99FF99;
+    border-radius: 10px;
+    padding: 2px;
+}
+
+.button-text {
+    text-align: center;
+    margin: auto;
+    padding-top: 20%;
+    size: 5px;
+    color: white;
+}
+
+.buttons-rows {
+    display: flex;
+    justify-content: center;
+}
+
+#calculator-screen {
+    background-color: black;
+    width: 375px;
+    height: 80px;
+    margin: auto;
+    border-radius: 10px;
+}
+
+#screen-text {
+    margin: auto;
+    margin-top: 20px;
+    padding-top: 25px;
+    padding-right: 5px;
+    text-align: right;
+    font-size: 50px;
+    color: white;
+}
+
+.calculator {
+    margin: auto;
+    align-items: center;
 }
